--- a/index.html
+++ b/index.html
@@ -16,7 +16,35 @@
   <body>
     
     <header>
-      NAVIGATION
+      <div class="container">
+		  <div class="d-flex">
+			<div class="mr-auto p-2">
+				<a class="navbar-brand" href="#">
+					<img src="images/logo/logo.png" height="30" alt="">
+				</a>
+			</div>
+			<div class="p-2">
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item active">
+							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item">
+							<a class="nav-link" href="#">Features</a>
+							</li>
+							<li class="nav-item">
+							<a class="nav-link" href="#">Pricing</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+		  </div>
+	  </div>
     </header>
     
     <main>
@@ -169,7 +197,7 @@
         </div>
       </section>
 
-      <section class="section section-partners bg-dark">
+      <section class="section section-contact bg-dark">
         <div class="container">
           <div class="row text-center">
             <div class="col-12 col-sm-6">
@@ -183,6 +211,9 @@
               </div>
             </div>
           </div>
+		  <div class="text-center">
+			<button type="button" class="btn btn-warning">Warning</button>
+		  </div>
         </div>
       </section>
 
