--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <header>
       <div class="container">
-		  <div class="d-flex">
+		  <div class="d-flex align-items-center">
 			<div class="mr-auto p-2">
 				<a class="navbar-brand" href="#">
 					<img src="images/logo/logo.png" height="30" alt="">
