--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <div class="container">
           <p class="lead">Welcome To Our Studio!</p>
           <h1 class="display-4">It’s nice to Meet you</h1>
-          <button type="button" class="btn btn-warning">Warning</button>
+          <button type="button" class="btn btn-warning">Sign up</button>
         </div>
       </section>
 
-      <section class="section section-services">
+      <section class="section section-services pb-5">
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4">Services</h1>
@@ -65,7 +65,7 @@
           <div class="row text-center">
             <div class="col-12 col-sm-6 col-md-4">
               <div class="card border-0">
-                <img src="images/icons/cart.svg" class="card-img-top" alt="...">
+                <img src="images/icons/cart.svg" class="col-5 card-img-top mx-auto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">E-Commerce</h5>
                   <p class="card-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4">
               <div class="card border-0">
-                <img src="images/icons/monitor.svg" class="card-img-top" alt="...">
+                <img src="images/icons/monitor.svg" class="col-5 card-img-top mx-auto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Responsive Web</h5>
                   <p class="card-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
@@ -83,7 +83,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4">
               <div class="card border-0">
-                <img src="images/icons/lock.svg" class="card-img-top" alt="...">
+                <img src="images/icons/lock.svg" class="col-5 card-img-top mx-auto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Web Security</h5>
                   <p class="card-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
@@ -94,7 +94,7 @@
         </div>
       </section>
 
-      <section class="section section-portfolio bg-light">
+      <section class="section section-portfolio pb-5 bg-light">
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4">Our portfolio</h1>
@@ -128,11 +128,38 @@
                 </div>
               </div>
             </div>
+			<div class="col-12 col-sm-6 col-md-4">
+              <div class="card border-0">
+                <img src="images/portfolio/4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Clever Poster</h5>
+                  <p class="card-text">Print Design</p>
+                </div>
+              </div>
+            </div>
+			<div class="col-12 col-sm-6 col-md-4">
+              <div class="card border-0">
+                <img src="images/portfolio/5.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Clever Poster</h5>
+                  <p class="card-text">Print Design</p>
+                </div>
+              </div>
+            </div>
+			<div class="col-12 col-sm-6 col-md-4">
+              <div class="card border-0">
+                <img src="images/portfolio/6.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Clever Poster</h5>
+                  <p class="card-text">Print Design</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="section section-team">
+      <section class="section section-team pb-5">
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4">our amazing team</h1>
@@ -170,7 +197,7 @@
         </div>
       </section>
 
-      <section class="section section-partners bg-light">
+      <section class="section section-partners pb-5 pt-5 bg-light">
         <div class="container">
           <div class="row text-center">
             <div class="col-6 col-sm-3">
@@ -197,22 +224,32 @@
         </div>
       </section>
 
-      <section class="section section-contact bg-dark">
+      <section class="section section-contact pb-5 pt-5 text-white bg-dark">
         <div class="container">
-          <div class="row text-center">
+          <div class="row">
             <div class="col-12 col-sm-6">
-              <div class="card border-0">
-                <img src="images/partners/envato.png" class="card-img-top" alt="...">
-              </div>
+				<form>
+					<div class="form-group">
+						<label for="exampleInputEmail1">Email address</label>
+						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">Password</label>
+						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+					</div>
+				</form>
             </div>
             <div class="col-12 col-sm-6">
-              <div class="card border-0">
-                <img src="images/partners/wordpress.png" class="card-img-top" alt="...">
-              </div>
+				<form>
+					<div class="form-group">
+						<label for="exampleFormControlTextarea1">Example textarea</label>
+						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+					</div>
+				</form>
             </div>
           </div>
 		  <div class="text-center">
-			<button type="button" class="btn btn-warning">Warning</button>
+			<button type="button" class="btn btn-warning">Submit</button>
 		  </div>
         </div>
       </section>
@@ -220,13 +257,13 @@
     </main>
 
     <footer>
-        <div class="container text-center">
+        <div class="container text-center pb-5 pt-5">
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <a href="#"><i class="fa fa-google-plus"></i></a>
             <a href="#"><i class="fa fa-skype"></i></a>
-          </div>
+        </div>
     </footer>
 
     <!-- Optional JavaScript -->
