--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
           <div class="row text-center">
             <div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0">
+              <div class="card border-0 mb-4">
                 <img src="images/portfolio/1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ebony & Ivory</h5>
@@ -124,7 +124,7 @@
               </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0">
+              <div class="card border-0 mb-4">
                 <img src="images/portfolio/2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Smart Stationary</h5>
@@ -133,7 +133,7 @@
               </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0">
+              <div class="card border-0 mb-4">
                 <img src="images/portfolio/3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Clever Poster</h5>
@@ -142,7 +142,7 @@
               </div>
             </div>
 			<div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0">
+              <div class="card border-0 mb-4">
                 <img src="images/portfolio/4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Clever Poster</h5>
@@ -151,7 +151,7 @@
               </div>
             </div>
 			<div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0">
+              <div class="card border-0 mb-4">
                 <img src="images/portfolio/5.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Clever Poster</h5>
@@ -160,7 +160,7 @@
               </div>
             </div>
 			<div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0">
+              <div class="card border-0 mb-4">
                 <img src="images/portfolio/6.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Clever Poster</h5>
@@ -212,26 +212,18 @@
 
       <section class="section section-partners pb-5 pt-5 bg-light">
         <div class="container">
-          <div class="row text-center">
+          <div class="d-flex align-items-center text-center">
             <div class="col-6 col-sm-3">
-              <div class="card border-0">
-                <img src="images/partners/envato.png" class="card-img-top" alt="...">
-              </div>
+              <img src="images/partners/envato.png" class="align-middle" alt="...">
             </div>
             <div class="col-6 col-sm-3">
-              <div class="card border-0">
-                <img src="images/partners/wordpress.png" class="card-img-top" alt="...">
-              </div>
+              <img src="images/partners/wordpress.png" class="" alt="...">
             </div>
             <div class="col-6 col-sm-3">
-              <div class="card border-0">
-                <img src="images/partners/atuts.png" class="card-img-top" alt="...">
-              </div>
+              <img src="images/partners/atuts.png" class="" alt="...">
             </div>
             <div class="col-6 col-sm-3">
-              <div class="card border-0">
-                <img src="images/partners/microlancer.png" class="card-img-top" alt="...">
-              </div>
+              <img src="images/partners/microlancer.png" class="" alt="...">
             </div>
           </div>
         </div>
@@ -275,6 +267,13 @@
     </main>
 
     <footer>
+		<div class="d-flex justify-content-center">
+			<a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-google-plus"></i></a>
+            <a href="#"><i class="fa fa-skype"></i></a>
+		</div>
         <div class="container text-center pb-5 pt-5">
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
