--- a/index.html
+++ b/index.html
@@ -240,20 +240,20 @@
 				<div class="col-12 col-sm-6">
 					<form>
 						<div class="form-group">
-							<label for="exampleInputEmail1">Email address</label>
-							<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+							<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="your Name *" placeholder="Enter email">
 						</div>
 						<div class="form-group">
-							<label for="exampleInputPassword1">Password</label>
-							<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-						</div>
+							<input type="password" class="form-control" id="exampleInputPassword1" placeholder="your e-mail *">
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Subject">
+            </div>
 					</form>
 				</div>
-				<div class="col-12 col-sm-6">
-					<form>
+				<div class="col-12 d-flex col-sm-6 align-items-stretch">
+					<form class="col-12">
 						<div class="form-group">
-							<label for="exampleFormControlTextarea1">Example textarea</label>
-							<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+							<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your message *"></textarea>
 						</div>
 					</form>
 				</div>
@@ -266,21 +266,28 @@
 
     </main>
 
-    <footer>
-		<div class="d-flex justify-content-center">
-			<a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-skype"></i></a>
-		</div>
-        <div class="container text-center pb-5 pt-5">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-skype"></i></a>
+    <footer class="pb-5 pt-5">
+      <div class="container">
+        <div class="row ">
+          <div class="col-4 d-flex justify-content-start d-flex align-items-center">
+            © Copyright 2014 FreebiesXpress.com
+          </div>
+          <div class="col-4 d-flex justify-content-between px-5">
+            <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-dark">
+              <a href="#"><i class="fa fa-twitter text-white"></i></a>
+            </div>
+            <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-dark">
+              <a href="#"><i class="fa fa-facebook text-white"></i></a>
+            </div>
+            <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-dark">
+              <a href="#"><i class="fa fa-pinterest text-white"></i></a>
+            </div>
+            <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-dark">
+              <a href="#"><i class="fa fa-google text-white"></i></a>
+            </div>
+          </div>
         </div>
+      </div>
     </footer>
 
     <!-- Optional JavaScript -->
