--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     
     <header class="header">
-		<div class="header-top">
+		<div class="header-top pb-4 pt-4">
 			<div class="container">
 				<div class="d-flex align-items-center">
 					<div class="mr-auto p-2">
@@ -58,8 +58,8 @@
 		<div class="jumbotron jumbotron-fluid text-center bg-transparent text-white">
 			<div class="container">
 				<p class="lead">Welcome To Our Studio!</p>
-				<h1 class="display-4 text-uppercase">It’s nice to Meet you</h1>
-				<button type="button" class="btn btn-warning text-uppercase">Tell me more</button>
+				<h1 class="display-4 text-uppercase mb-5">It’s nice to Meet you</h1>
+				<button type="button" class="btn btn-warning text-uppercase text-white">Tell me more</button>
 			</div>
 		</div>
 		<div class="hero-background"><img src="images/hero/hero-pic.jpg" alt="Not found"></div>
@@ -73,7 +73,7 @@
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4 text-uppercase">Services</h1>
-            <p class="lead">Proin iaculis purus consequat sem cure.</p>
+            <p class="lead mb-5">Proin iaculis purus consequat sem cure.</p>
           </div>
           <div class="row text-center">
             <div class="col-12 col-sm-6 col-md-4">
@@ -111,20 +111,20 @@
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4 text-uppercase">Our portfolio</h1>
-            <p class="lead">Proin iaculis purus consequat sem cure.</p>
+            <p class="lead mb-5">Proin iaculis purus consequat sem cure.</p>
           </div>
           <div class="row text-center">
-            <div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0 mb-4">
+            <div class="col-12 col-sm-6 col-md-4 mb-4">
+              <div class="card border-0">
                 <img src="images/portfolio/1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ebony & Ivory</h5>
-                  <p class="card-text">Print Design</p>
+                  <p class="card-text">Branding</p>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0 mb-4">
+            <div class="col-12 col-sm-6 col-md-4 mb-4">
+              <div class="card border-0">
                 <img src="images/portfolio/2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Smart Stationary</h5>
@@ -132,21 +132,21 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0 mb-4">
-                <img src="images/portfolio/3.jpg" class="card-img-top" alt="...">
+            <div class="col-12 col-sm-6 col-md-4 mb-4">
+              <div class="card border-0">
+                <img src="images/portfolio/3.jpg" class="img" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Clever Poster</h5>
                   <p class="card-text">Print Design</p>
                 </div>
               </div>
             </div>
-			<div class="col-12 col-sm-6 col-md-4">
-              <div class="card border-0 mb-4">
+			<div class="col-12 col-sm-6 col-md-4 mb-4">
+              <div class="card border-0">
                 <img src="images/portfolio/4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Clever Poster</h5>
-                  <p class="card-text">Print Design</p>
+                  <h5 class="card-title">Vinyl Record</h5>
+                  <p class="card-text">Vinyl Record</p>
                 </div>
               </div>
             </div>
@@ -154,8 +154,8 @@
               <div class="card border-0 mb-4">
                 <img src="images/portfolio/5.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Clever Poster</h5>
-                  <p class="card-text">Print Design</p>
+                  <h5 class="card-title">Treehouse Template</h5>
+                  <p class="card-text">Web Design</p>
                 </div>
               </div>
             </div>
@@ -163,8 +163,8 @@
               <div class="card border-0 mb-4">
                 <img src="images/portfolio/6.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Clever Poster</h5>
-                  <p class="card-text">Print Design</p>
+                  <h5 class="card-title">Burned Logo</h5>
+                  <p class="card-text">Branding</p>
                 </div>
               </div>
             </div>
@@ -176,33 +176,66 @@
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4 text-uppercase">our amazing team</h1>
-            <p class="lead">Proin iaculis purus consequat sem cure.</p>
+            <p class="lead mb-5">Proin iaculis purus consequat sem cure.</p>
           </div>
           <div class="row text-center">
             <div class="col-12 col-sm-6 col-md-4">
               <div class="card border-0">
-                <img src="images/team/portrait.jpg" class="card-img-top rounded-circle mx-auto" alt="...">
+                <img src="images/team/person1.jpg" class="card-img-top rounded-circle mx-auto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Kimberly Thompson</h5>
                   <p class="card-text">Marketer</p>
+                  <div class="col-8 d-flex mx-auto justify-content-between">
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-twitter text-dark"></i></a>
+                    </div>
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-facebook text-dark"></i></a>
+                    </div>
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-google text-dark"></i></a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
               <div class="card border-0">
-                <img src="images/team/portrait.jpg" class="card-img-top rounded-circle mx-auto" alt="...">
+                <img src="images/team/person2.jpg" class="card-img-top rounded-circle mx-auto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Rico Massimo</h5>
                   <p class="card-text">Coder</p>
+                  <div class="col-8 d-flex mx-auto justify-content-between">
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-twitter text-dark"></i></a>
+                    </div>
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-facebook text-dark"></i></a>
+                    </div>
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-google text-dark"></i></a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
               <div class="card border-0">
-                <img src="images/team/portrait.jpg" class="card-img-top rounded-circle mx-auto" alt="...">
+                <img src="images/team/person3.jpg" class="card-img-top rounded-circle mx-auto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Uku Mason</h5>
                   <p class="card-text">Graphic Designer</p>
+                  <div class="col-8 d-flex mx-auto justify-content-between">
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-twitter text-dark"></i></a>
+                    </div>
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-facebook text-dark"></i></a>
+                    </div>
+                    <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-secondary">
+                      <a href="#"><i class="fa fa-google text-dark"></i></a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -212,18 +245,18 @@
 
       <section class="section section-partners pb-5 pt-5 bg-light">
         <div class="container">
-          <div class="d-flex align-items-center text-center">
-            <div class="col-6 col-sm-3">
-              <img src="images/partners/envato.png" class="align-middle" alt="...">
+          <div class="row d-flex align-items-center text-center">
+            <div class="col-6 col-md-3 pb-3 pt-3">
+              <img src="images/partners/envato.png" class="col-sm-11" alt="...">
             </div>
-            <div class="col-6 col-sm-3">
-              <img src="images/partners/wordpress.png" class="" alt="...">
+            <div class="col-6 col-md-3 pb-3 pt-3">
+              <img src="images/partners/wordpress.png" class="col-sm-11" alt="...">
             </div>
-            <div class="col-6 col-sm-3">
-              <img src="images/partners/atuts.png" class="" alt="...">
+            <div class="col-6 col-md-3 pb-3 pt-3">
+              <img src="images/partners/atuts.png" class="col-sm-11" alt="...">
             </div>
-            <div class="col-6 col-sm-3">
-              <img src="images/partners/microlancer.png" class="" alt="...">
+            <div class="col-6 col-md-3 pb-3 pt-3">
+              <img src="images/partners/microlancer.png" class="col-sm-11" alt="...">
             </div>
           </div>
         </div>
@@ -233,33 +266,33 @@
         <div class="container">
 			<div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 				<h1 class="display-4 text-uppercase">contact us</h1>
-				<p class="lead">Proin iaculis purus consequat sem cure.</p>
+				<p class="lead mb-5">Proin iaculis purus consequat sem cure.</p>
 			</div>
 		
 			<div class="row">
 				<div class="col-12 col-sm-6">
 					<form>
-						<div class="form-group">
-							<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="your Name *" placeholder="Enter email">
+						<div class="form-group mb-0 py-2 h-100">
+							<input type="email" class="form-control text-uppercase" id="exampleInputEmail1" aria-describedby="your Name *" placeholder="Enter email">
 						</div>
-						<div class="form-group">
-							<input type="password" class="form-control" id="exampleInputPassword1" placeholder="your e-mail *">
+						<div class="form-group mb-0 py-2">
+							<input type="password" class="form-control text-uppercase" id="exampleInputPassword1" placeholder="your e-mail *">
             </div>
-            <div class="form-group">
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Subject">
+            <div class="form-group mb-0 py-2">
+              <input type="text" class="form-control text-uppercase" id="exampleInputSubject" placeholder="Subject">
             </div>
 					</form>
 				</div>
-				<div class="col-12 d-flex col-sm-6 align-items-stretch">
-					<form class="col-12">
-						<div class="form-group">
-							<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your message *"></textarea>
+				<div class="col-12 col-sm-6">
+					<form class="h-100">
+						<div class="form-group h-100 mb-0 py-2">
+							<textarea class="form-control h-100 text-uppercase" id="exampleFormControlTextarea1" rows="3" placeholder="Your message *"></textarea>
 						</div>
 					</form>
 				</div>
 			</div>
 		  <div class="text-center">
-			<button type="button" class="btn btn-warning">Submit</button>
+			<button type="button" class="btn mt-4 btn-warning text-white text-uppercase">Send message</button>
 		  </div>
         </div>
       </section>
@@ -272,7 +305,7 @@
           <div class="col-4 d-flex justify-content-start d-flex align-items-center">
             © Copyright 2014 FreebiesXpress.com
           </div>
-          <div class="col-4 d-flex justify-content-between px-5">
+          <div class="col-4 d-flex justify-content-between">
             <div class="icon-wrap d-flex justify-content-center align-items-center rounded-circle bg-dark">
               <a href="#"><i class="fa fa-twitter text-white"></i></a>
             </div>
