--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Golden</title>
-	
-	<link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+	  <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
@@ -34,19 +34,19 @@
 							<div class="collapse navbar-collapse" id="navbarNav">
 								<ul class="navbar-nav">
 									<li class="nav-item active">
-										<a class="nav-link text-white text-uppercase" href="#">Home <span class="sr-only">(current)</span></a>
+										<a class="nav-link text-white text-uppercase nav-scroll" href="#">Home <span class="sr-only">(current)</span></a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link text-white text-uppercase" href="#">Services</a>
+										<a class="nav-link text-white text-uppercase nav-scroll" href="#section-1">Services</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link text-white text-uppercase" href="#">Portfolio</a>
+										<a class="nav-link text-white text-uppercase nav-scroll" href="#section-2">Portfolio</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link text-white text-uppercase" href="#">About</a>
+										<a class="nav-link text-white text-uppercase nav-scroll" href="#section-3">About</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link text-white text-uppercase" href="#">Contact</a>
+										<a class="nav-link text-white text-uppercase nav-scroll" href="#section-4">Contact</a>
 									</li>
 								</ul>
 							</div>
@@ -58,8 +58,10 @@
 		<div class="jumbotron jumbotron-fluid text-center bg-transparent text-white">
 			<div class="container">
 				<p class="lead">Welcome To Our Studio!</p>
-				<h1 class="display-4 text-uppercase mb-5">It’s nice to Meet you</h1>
-				<button type="button" class="btn btn-warning text-uppercase text-white">Tell me more</button>
+        <h1 class="display-4 text-uppercase mb-5">It’s nice to Meet you</h1>
+        <a href="#section-1" class="button-scroll">
+          <button type="button" class="btn btn-warning text-uppercase text-white">Tell me more</button>
+        </a>
 			</div>
 		</div>
 		<div class="hero-background"><img src="images/hero/hero-pic.jpg" alt="Not found"></div>
@@ -69,7 +71,7 @@
     <main>
       
 
-      <section class="section section-services pb-5">
+      <section id="section-1" class="section section-services pb-5">
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4 text-uppercase">Services</h1>
@@ -107,7 +109,7 @@
         </div>
       </section>
 
-      <section class="section section-portfolio pb-5 bg-light">
+      <section id="section-2" class="section section-portfolio pb-5 bg-light">
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4 text-uppercase">Our portfolio</h1>
@@ -116,7 +118,9 @@
           <div class="row text-center">
             <div class="col-12 col-sm-6 col-md-4 mb-4">
               <div class="card border-0">
-                <img src="images/portfolio/1.jpg" class="card-img-top" alt="...">
+                <a data-fancybox="gallery" href="images/portfolio/1.jpg">
+                  <img src="images/portfolio/1.jpg" class="card-img-top" alt="...">
+                </a>  
                 <div class="card-body">
                   <h5 class="card-title">Ebony & Ivory</h5>
                   <p class="card-text">Branding</p>
@@ -125,7 +129,9 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4 mb-4">
               <div class="card border-0">
-                <img src="images/portfolio/2.jpg" class="card-img-top" alt="...">
+                <a data-fancybox="gallery" href="images/portfolio/2.jpg">
+                  <img src="images/portfolio/2.jpg" class="card-img-top" alt="...">
+                </a> 
                 <div class="card-body">
                   <h5 class="card-title">Smart Stationary</h5>
                   <p class="card-text">Print Design</p>
@@ -134,25 +140,31 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4 mb-4">
               <div class="card border-0">
-                <img src="images/portfolio/3.jpg" class="img" alt="...">
+                <a data-fancybox="gallery" href="images/portfolio/3.jpg">
+                  <img src="images/portfolio/3.jpg" class="card-img-top" alt="...">
+                </a> 
                 <div class="card-body">
                   <h5 class="card-title">Clever Poster</h5>
                   <p class="card-text">Print Design</p>
                 </div>
               </div>
             </div>
-			<div class="col-12 col-sm-6 col-md-4 mb-4">
+			      <div class="col-12 col-sm-6 col-md-4 mb-4">
               <div class="card border-0">
-                <img src="images/portfolio/4.jpg" class="card-img-top" alt="...">
+                <a data-fancybox="gallery" href="images/portfolio/4.jpg">
+                  <img src="images/portfolio/4.jpg" class="card-img-top" alt="...">
+                </a> 
                 <div class="card-body">
                   <h5 class="card-title">Vinyl Record</h5>
                   <p class="card-text">Vinyl Record</p>
                 </div>
               </div>
             </div>
-			<div class="col-12 col-sm-6 col-md-4">
+			      <div class="col-12 col-sm-6 col-md-4">
               <div class="card border-0 mb-4">
-                <img src="images/portfolio/5.jpg" class="card-img-top" alt="...">
+                <a data-fancybox="gallery" href="images/portfolio/5.jpg">
+                  <img src="images/portfolio/5.jpg" class="card-img-top" alt="...">
+                </a> 
                 <div class="card-body">
                   <h5 class="card-title">Treehouse Template</h5>
                   <p class="card-text">Web Design</p>
@@ -161,7 +173,9 @@
             </div>
 			<div class="col-12 col-sm-6 col-md-4">
               <div class="card border-0 mb-4">
-                <img src="images/portfolio/6.jpg" class="card-img-top" alt="...">
+                <a data-fancybox="gallery" href="images/portfolio/6.jpg">
+                  <img src="images/portfolio/6.jpg" class="card-img-top" alt="...">
+                </a> 
                 <div class="card-body">
                   <h5 class="card-title">Burned Logo</h5>
                   <p class="card-text">Branding</p>
@@ -172,7 +186,7 @@
         </div>
       </section>
 
-      <section class="section section-team pb-5">
+      <section id="section-3" class="section section-team pb-5">
         <div class="container">
           <div class="section-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4 text-uppercase">our amazing team</h1>
@@ -243,7 +257,7 @@
         </div>
       </section>
 
-      <section class="section section-partners pb-5 pt-5 bg-light">
+      <section id="section-4" class="section section-partners pb-5 pt-5 bg-light">
         <div class="container">
           <div class="row d-flex align-items-center text-center">
             <div class="col-6 col-md-3 pb-3 pt-3">
@@ -328,6 +342,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="js/components/nav-item.js"></script>
+    <script src="js/components/button-scroll.js"></script>
+    <script src="js/main.js"></script>
   </body>
 
 </html>
